tests/unit-fail-compilation/subtraction-null.ref
File: subtraction-null.c
Line: 3
Error: UB-CEA5
Description: Computing pointer difference between two different objects.
Type: Undefined behavior.
See also: C11 sec. 6.5.6:9, J.2:1 item 48
Translation failed (config dumped). Run kcc -d subtraction-null.c to see commands run.
