tests/unit-fail-compilation/subtraction-null.c
#include<stddef.h>
int main() {
  (int *)0 - (int *)0;
}
